--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     access_log /var/log/nginx/application.access.log;
 
     root /app/laravel/public;
-    index index.blade.php;
+    index index.php;
 
     # try to serve file directly, fallback to index.blade.php
     location / {
@@ -14,7 +14,7 @@ server {
     }
 
     if (!-e $request_filename) {
-        rewrite ^.*$ /index.blade.php last;
+        rewrite ^.*$ /index.php last;
     }
 
     location ~ \.php$ {
