--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,39 +3,45 @@
 ###############################################################################
 version: '3.1'
 services:
-    mailhog:
-        image: 'mailhog/mailhog:latest'
-        ports:
-            - '7001:8025'
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - '7001:8025'
 
-    redis:
-        image: 'redis:alpine'
+  redis:
+    image: 'redis:alpine'
 
-    mysql:
-        image: 'mysql:8.0'
-        working_dir: /app
-        volumes:
-            - '.:/app'
-        environment:
-            - MYSQL_ROOT_PASSWORD=password
-            - MYSQL_DATABASE=news
-            - MYSQL_USER=user
-            - MYSQL_PASSWORD=password
-        ports:
-            - '7002:3306'
+  mysql:
+    image: 'mysql:8.0'
+    working_dir: /app
+    volumes:
+      - './init:/docker-entrypoint-initdb.d'
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=news
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+    ports:
+      - '7002:3306'
 
-    webserver:
-        image: 'nginx:alpine'
-        working_dir: /app
-        volumes:
-            - '.:/app'
-            - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
-        ports:
-            - '7000:80'
+  webserver:
+    image: 'nginx:alpine'
+    working_dir: /app
+    volumes:
+      - '.:/app'
+      - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+    ports:
+      - '7000:80'
 
-    php-fpm:
-        build: phpdocker/php-fpm
-        working_dir: /app
-        volumes:
-            - '.:/app'
-            - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
+  php-fpm:
+    build: phpdocker/php-fpm
+    working_dir: /app
+    volumes:
+      - '.:/app'
+      - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
+
+  adminer:
+    image: 'adminer'
+    working_dir: /app
+    ports:
+      - '7070:8080'
