--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="News Portal"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:F3KsGLKGFsoTD9gXZwGPA2iJfgFDC64mQjuLOIu/leo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,14 +9,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=news
+DB_USERNAME=user
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
