--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "orchestra/parser": "^7.0",
         "predis/predis": "^2.1"
     },
     "require-dev": {
