--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -9,10 +9,13 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "orchestra/parser": "^7.0",
-        "predis/predis": "^2.1"
+        "predis/predis": "^2.1",
+        "socialiteproviders/github": "^4.1",
+        "socialiteproviders/vkontakte": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
