--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/helpers": "^1.6",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
@@ -15,7 +16,8 @@
         "orchestra/parser": "^7.0",
         "predis/predis": "^2.1",
         "socialiteproviders/github": "^4.1",
-        "socialiteproviders/vkontakte": "^5.0"
+        "socialiteproviders/vkontakte": "^5.0",
+        "unisharp/laravel-filemanager": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
