--- a/laravel/package.json
+++ b/laravel/package.json
@@ -13,5 +13,10 @@
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+        "@ckeditor/ckeditor5-upload": "^36.0.1",
+        "ckeditor4": "^4.20.1"
     }
 }
