--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR "/app"
 RUN apt-get update; \
     apt-get -y --no-install-recommends install \
         php8.2-mysql \ 
-        php8.2-redis \ 
+        php8.2-redis \
+        imagemagick \
         php8.2-xdebug; \
     apt-get clean; \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
